works with eagle

--- a/app/index.html
+++ b/app/index.html
@@ -22,7 +22,13 @@
   <p>Orzel-1 position:</p>
   <p id="position"></p>
   <button id="clear">Restart</button>
-
+  <p>Legenda</p>
+  <ul>
+    <li>Kolor zielony - czujnik przedni</li>
+    <li>Kolor niebieski - lewy czujnik</li>
+    <li>Kolor czerwony - czujnik prawy</li>
+    <li>Kolor biały - pozycja</li>
+  </ul>
   <script src="https://cdn.socket.io/4.8.1/socket.io.min.js"
     integrity="sha384-mkQ3/7FUtcGyoppY6bz/PORYoGqOl7/aSUMn2ymDOJcapfS6PHqxhRTMh1RR0Q6+"
     crossorigin="anonymous"></script>
